--- a/Server/assets/jst/system-add-pool.html
+++ b/Server/assets/jst/system-add-pool.html
@@ -1,9 +1,9 @@
 <form class="system-pool-add">
   <div class="input-append">
     <input name="pool" required maxlength="255"
-           type="text" placeholder="System pool"
+           type="text" placeholder="Pool name"
            pattern="[^\s/]([^/]*[^\s/])?"
-           title="System pool name of up to 255 characters"/>
+           title="System pool name of up to 255 characters, excluding /"/>
     <button class="btn" type="submit" data-loading-text="<i class='fa fa-spinner fa-plus'></i> Adding&hellip;"><i class="fa fa-plus"></i> Add</button>
   </div>
 </form>
