--- a/Server/assets/jst/system-add-pool.html
+++ b/Server/assets/jst/system-add-pool.html
@@ -4,6 +4,6 @@
            type="text" placeholder="Pool name"
            pattern="[^\s/]([^/]*[^\s/])?"
            title="System pool name of up to 255 characters, excluding /"/>
-    <button class="btn" type="submit" data-loading-text="<i class='fa fa-spinner fa-plus'></i> Adding&hellip;"><i class="fa fa-plus"></i> Add</button>
+    <button class="btn" type="submit" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Adding&hellip;"><i class="fa fa-plus"></i> Add</button>
   </div>
 </form>
