--- a/Server/assets/jst/system-pool-heading.html
+++ b/Server/assets/jst/system-pool-heading.html
@@ -1,7 +1,10 @@
 <div class="page-header">
     <h1><%- name %> <small>owned by <%= owner.toHTML() %></small>
         <% if (can_edit) { %>
-        <button class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
+        <div class="btn-group">
+          <button class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
+          <button class="btn btn-danger delete" data-loading-text="<i class='fa fa-trash-o fa-spin'></i> Deleting&hellip;"><i class="fa fa-trash-o"></i> Delete</button>
+        </div>
         <% } %>
     </h1>
 </div>
