render pool descriptions as Markdown
Change-Id: I735369e42ec51a1e5e96eb7d56493adca522b4ec

--- a/Server/assets/jst/system-pool-edit.html
+++ b/Server/assets/jst/system-pool-edit.html
@@ -7,7 +7,8 @@
   <label for="name">Name</label>
   <input type="text" id="name" name="name" placeholder="Name" />
   <label for="description">Description</label>
-  <textarea id="description" name="description" class="input-block-level" />
+  <textarea id="description" name="description" class="input-block-level" rows="7" />
+  <span class="help-block">The description is rendered as Markdown.</span>
   <label for="description">Owner</label>
   <div class="form-inline">
     <div class="input-prepend">
