Web UI for changing active access policy
Change-Id: I0aae72e5036367efd1941a5031ea02bb56e9d7e1

--- a/Server/assets/jst/access-policy.html
+++ b/Server/assets/jst/access-policy.html
@@ -1,5 +1,4 @@
-<form>
-  <table class="table table-bordered table-hover">
+<table class="table table-bordered table-hover access-policy-table">
     <thead>
       <tr>
         <th></th>
@@ -43,12 +42,4 @@
     <tbody class="everybody-row">
       <!-- everybody row goes here -->
     </tbody>
-  </table>
-  <% if (!readonly) { %>
-    <div class="form-actions">
-      <button type="submit" class="btn btn-primary">Save changes</button>
-      <button type="reset" class="btn">Revert</button>
-      <span class="sync-status"></span>
-    </div>
-  <% } %>
-</form>
+</table>
