some slight wording tweaks for the pool page
Change-Id: Id83ad38b710348a93ca23130db6091c8856ab6a6

--- a/Server/assets/jst/system-pool-access-policy.html
+++ b/Server/assets/jst/system-pool-access-policy.html
@@ -1,4 +1,6 @@
 <form>
+  <p>Systems can optionally be configured to use the access policy from this pool.</p>
+
   <div class="access-policy"/>
 
   <% if (!readonly) { %>
