--- a/Server/assets/jst/system-pool-systems.html
+++ b/Server/assets/jst/system-pool-systems.html
@@ -1,5 +1,5 @@
 <p>
-The system pool has these systems:
+The following systems are members of this pool:
 </p>
 <div>
  <% if (_.isEmpty(systems)) { %>
