display external task name on Executed Tasks tab on system page
Bug: 1232979
Change-Id: Ic714dee3aa7ff7917a91375fbf29cbabb1f54751

--- a/Server/assets/jst/backgrid-task-cell.html
+++ b/Server/assets/jst/backgrid-task-cell.html
@@ -1,5 +1,5 @@
-<% if (task) { %>
-    <a href="<%- window.beaker_url_prefix %>tasks/<%- task.id %>" title="<%- name %>"><%- name %></a>
+<% if (!_.isEmpty(task)) { %>
+    <%= task.toHTML() %>
 <% } else { %>
     <%- name %>
 <% } %>
