--- a/Server/assets/jst/system-pool-edit.html
+++ b/Server/assets/jst/system-pool-edit.html
@@ -5,7 +5,7 @@
 </div>
 <div class="modal-body">
   <label for="name">Name</label>
-  <input type="text" id="name" name="name" placeholder="Name" />
+  <input type="text" id="name" name="name" placeholder="Name" maxlength="255" pattern="[^\s/]([^/]*[^\s/])?" title="System pool name of up to 255 characters, excluding '/'" required />
   <label for="description">Description</label>
   <textarea id="description" name="description" class="input-block-level" rows="7" />
   <span class="help-block">The description is rendered as Markdown.</span>
