--- a/Server/assets/jst/power-type-add.html
+++ b/Server/assets/jst/power-type-add.html
@@ -1,6 +1,6 @@
 <form class="add-power-type">
   <div class="input-append">
     <input type="text" name="power_type_name" placeholder="New Powertype" required />
-    <button class="btn" name="btn_add_power_type" type="submit" data-loading-text="<i class='fa fa-spinner fa-plus'></i> Adding&hellip; "><i class="fa fa-plus"></i> Add </button>
+    <button class="btn" name="btn_add_power_type" type="submit" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Adding&hellip; "><i class="fa fa-plus"></i> Add </button>
   </div>
 </form>
