Delete button on group page
Bug: 1275999
Change-Id: I9d63726aa8c0adb1a70671f4fcd5e6cf13349008

--- a/Server/assets/jst/group-page-header.html
+++ b/Server/assets/jst/group-page-header.html
@@ -1,7 +1,12 @@
 <div class="page-header">
     <h1><%- group_name %> <small><%- display_name %></small>
+      <div class="btn-group">
         <% if (can_edit) { %>
           <button class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
         <% } %>
+        <% if (can_delete) { %>
+          <button class="btn btn-danger delete" data-loading-text="<i class='fa fa-trash-o fa-spin'></i> Deleting&hellip;"><i class="fa fa-trash-o"></i> Delete</button>
+        <% } %>
+      </div>
     </h1>
 </div>
