LDAP groups should not have any owners
In d3993d21, it allows to modify LDAP group ownership.
However, the owners will be removed after syncing from
the LDAP server. So we should stick with the old behavior
that LDAP groups don't have any owners.

Bug: 1220610
Change-Id: I5848b30e2b8f945aaa40c6f98b6acf9ef9295e82

--- a/Server/assets/jst/group-owners-list.html
+++ b/Server/assets/jst/group-owners-list.html
@@ -1,3 +1,6 @@
+<% if (ldap) { %>
+<p>LDAP group does not have any owners.</p>
+<% } else { %>
 <p>
 The following users are owners of this group:
 </p>
@@ -7,3 +10,4 @@ The following users are owners of this group:
 <% } %>
 <ul class="list-group group-owners-list"></ul>
 </div>
+<% } %>
