--- a/Server/assets/jst/group-create.html
+++ b/Server/assets/jst/group-create.html
@@ -13,11 +13,26 @@
     <input type="text" id="display_name" name="display_name" class="input-block-level"
         placeholder="Display name" required maxlength="255"
         title="Display name of up to 255 characters"/>
-    <% if (can_create_ldap) { %>
-      <div class="checkbox">
-        <label><input type="checkbox" name="ldap"> Populate group membership from LDAP</label>
-      </div>
-    <% } %>
+    <label for="membership_type">Membership Type</label>
+    <select id="membership_type" name="membership_type">
+      <option value="normal">Normal</option>
+      <% if (can_create_ldap) { %>
+      <option value="ldap">LDAP</option>
+      <% } %>
+      <option value="inverted">Inverted</option>
+    </select>
+    <p class="help-block">
+       Specifies how group membership is populated:
+    </p>
+    <ul class="help-block">
+       <li>Normal: Group is initially empty, members are explicitly added and removed by
+           the group owner.
+       <% if (can_create_ldap) { %>
+       <li>LDAP: Membership is populated from the LDAP group with the same group name.
+       <% } %>
+       <li>Inverted: Group contains all Beaker users <em>except</em> users who have been explicitly
+           excluded by the group owner.
+    </ul>
   </div>
   <div class="modal-footer">
     <div class="sync-status"/>
