set maxlength on Condition Report textarea
This lets the user know about the length limitation sooner because their
browser will enforce it too, as well as the server.

Change-Id: Ifc697ccb0e095b1e12c127d277a3bb43467c0c7f

--- a/Server/assets/jst/system-scheduler-settings.html
+++ b/Server/assets/jst/system-scheduler-settings.html
@@ -20,7 +20,7 @@
     <label class="control-label" for="status_reason">Condition Report</label>
     <div class="controls">
       <textarea id="status_reason" name="status_reason"
-          class="input-block-level" rows="4"
+          class="input-block-level" rows="4" maxlength="4000"
           <% if (!can_change_status) { %>disabled<% } %>></textarea>
       <span class="help-block">The condition report is displayed to all users. 
       You can use it to record the reason why the system has been removed from 
