recipe page: add possible systems link
Bug: 1263918
Change-Id: I4f09c09679f685b5984ed02d4f9710826746ca41

--- a/Server/assets/jst/recipe-summary.html
+++ b/Server/assets/jst/recipe-summary.html
@@ -23,6 +23,12 @@
       } else {
           %><%- resource.get('fqdn') %><%
       } %><%
+  } %><%
+  if (status == 'Queued' && !_.isEmpty(possible_systems)) { %>
+      <br/>on
+      <a href="<%- beaker_url_prefix %>recipes/systems?recipe_id=<%- id %>">
+      <%- _.size(possible_systems) %> possible
+      <%- _.size(possible_systems) > 1 ? 'systems' : 'system' %></a><%
   } %><% if (!_.isEmpty(role) && role != 'None' && role != 'STANDALONE' && role != 'RECIPE_MEMBERS') { %>
       <br/>with role <%- role %><%
   } %>.
