recipe page: add UI for commenting on recipe tasks and results
Bug: 1263918
Change-Id: Idf6f6e5c8fadcac5abecef7c55c68f7c6d4c1bbb

--- a/Server/assets/jst/recipe-task-result.html
+++ b/Server/assets/jst/recipe-task-result.html
@@ -17,6 +17,9 @@
 <div class="task-result-logs">
     <% /* task result logs go here */ %>
 </div>
+<div class="task-result-comments">
+    <% /* task result comments go here */ %>
+</div>
 <div class="task-result-result">
     <% if (score != 0) { %>
         <%- score %>
