--- a/Server/assets/jst/recipe-task-summary.html
+++ b/Server/assets/jst/recipe-task-summary.html
@@ -32,6 +32,9 @@
 <div class="task-logs">
     <% /* task logs go here */ %>
 </div>
+<div class="task-comments">
+    <% /* task comments go here */ %>
+</div>
 <div class="recipe-task-status">
     <% /* populated by the render() method */ %>
 </div>
