--- a/Server/assets/jst/group-rootpassword.html
+++ b/Server/assets/jst/group-rootpassword.html
@@ -8,4 +8,14 @@
     No group root password set. Group jobs will use the root password preferences of the submitting user.
   </p>
   <% } %>
+<% } else { %>
+    <p>You do not have permission to view this group's root password.</p>
+<% } %>
+<% if (can_edit) { %>
+    <form>
+      <div class="input-append">
+        <input type="password" name="root_password" placeholder="New root password" />
+        <button type="submit" class="btn" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Saving&hellip;">Save</button>
+      </div>
+    </form>
 <% } %>
