recipe page: add export links
Bug: 1263918
Change-Id: Id9887214a3c593ebdeb6ec6b002d3796a6513c73

--- a/Server/assets/jst/job-header.html
+++ b/Server/assets/jst/job-header.html
@@ -1,4 +1,4 @@
-<div class="job-alternative-formats">
+<div class="alternative-formats">
   <p>View as:</p>
   <ul><li><a href="<%- id %>.xml">Beaker results XML</a></li><li><a href="<%- id %>.junit.xml">JUnit XML</a></li></ul>
 </div>
