--- a/Server/assets/jst/recipe-header.html
+++ b/Server/assets/jst/recipe-header.html
@@ -1,12 +1,16 @@
+<div class="alternative-formats">
+  <p>View as:</p>
+  <ul><li><a href="<%- id %>.xml">Beaker results XML</a></li><li><a href="<%- id %>.junit.xml">JUnit XML</a></li></ul>
+</div>
 <div class="page-header">
     <h1><abbr title="Recipe">R</abbr>:<%- id %>
         <small>
           1 of <%- all_recipes %> recipes in <%= recipeset.get('job').toHTML()%>
         </small>
+        <div class="btn-group recipe-btn-group">
         <% if (can_edit) { %>
-          <div class="btn-group recipe-btn-group">
             <button class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
-          </div>
         <% } %>
+        </div>
     </h1>
 </div>
