recipe page: shorten the tab ids
URLs like /recipes/123#recipe-installation seem a bit redundant, this
gives us /recipes/123#installation instead.

Change-Id: I254cade47c4cedfc6fbdc68bf84de9e90de6332c

--- a/Server/assets/jst/recipe-installation.html
+++ b/Server/assets/jst/recipe-installation.html
@@ -25,6 +25,6 @@
         <% } %>
     </div>
 </div>
-<div id="recipe-installation-details" class="recipe-installation-details">
+<div class="recipe-installation-details">
     <% /* populated by the render() method */ %>
 </div>
