recipe page: add clone button
Bug: 1263918
Change-Id: I8863cde6c6274217e5e3e011b9af04b64cfdad59

--- a/Server/assets/jst/recipe-header.html
+++ b/Server/assets/jst/recipe-header.html
@@ -11,6 +11,7 @@
         <% if (can_edit) { %>
             <button class="btn edit"><i class="fa fa-pencil-square-o"></i> Edit</button>
         <% } %>
+        <a href="<%- clone_href %>" class="btn"><i class="fa fa-copy"></i> Clone</a>
         </div>
     </h1>
 </div>
