tidy up title and aria-label on recipe logs
Change-Id: I159e1286a69790f76ebdd232c52003744e1482bd

--- a/Server/assets/jst/logs-list.html
+++ b/Server/assets/jst/logs-list.html
@@ -1,7 +1,7 @@
 <ul class="unstyled">
  <% _.each(logs, function (log) { %>
  <li>
-     <a href="<%- log.href %>" title="<%- log.path %>"><%- log.path %></a>
+     <a href="<%- log.href %>"><%- log.path %></a>
  </li>
  <% }) %>
 </ul>
