adjust wording in recipe reservation extend dialog
Change-Id: If10b83aaf0c18c7c949bc4cec67bdf1447a113e1

--- a/Server/assets/jst/recipe-extend-reservation.html
+++ b/Server/assets/jst/recipe-extend-reservation.html
@@ -7,9 +7,10 @@
     <div class="input-append">
         <input type="number" step="1" id="kill_time" name="kill_time"
             placeholder="Time in seconds" required />
-        <span class="add-on">s</span>
+        <span class="add-on">seconds</span>
     </div>
-    <span class="help-block">Extends the reservation from now.</span>
+    <span class="help-block">The watchdog time will be extended so that it 
+    expires this many seconds from now.</span>
   </div>
   <div class="modal-footer">
     <div class="sync-status"/>
