recipe page: fix random scroll bars on the tasks tab
bug: 1324399
Change-Id: If8c02f4dc074c702b0713a826de3daa0b7da776f

--- a/Server/assets/jst/recipe-page.html
+++ b/Server/assets/jst/recipe-page.html
@@ -5,4 +5,4 @@
   <li><a data-toggle="tab" href="#tasks">Tasks</a></li>
   <li><a data-toggle="tab" href="#reservation">Reservation</a></li>
 </ul>
-<div class="tab-content"></div>
+<div class="tab-content recipe-tabs"></div>
