--- a/Server/assets/jst/comment-form.html
+++ b/Server/assets/jst/comment-form.html
@@ -1,5 +1,6 @@
 <form class="new-comment">
     <textarea name="comment" class="input-block-level" rows="5" />
+    <p class="help-block">Comments are rendered as Markdown.</p>
     <div class="sync-status"/>
     <button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spin fa-spinner'></i> Commenting&hellip;">Comment</button>
 </form>
