Fix regression when showing external task results
This patch fixes a problem in the JavaScript template which crashes when
trying to render a link to information in the task library. External
tasks are not stored in the task library and therefore don't provide any
additional meta data to be displayed.

Bug: 1326562
Change-Id: I760f3cad9eb9999268037a6b6bd958688bef5d38

--- a/Server/assets/jst/recipe-task-summary.html
+++ b/Server/assets/jst/recipe-task-summary.html
@@ -17,7 +17,7 @@
         <% if (task) { %>
             <a href="<%- beaker_url_prefix %>tasks/<%- task.get('id') %>"><%- task.get('name') %></a>
         <% } else { %>
-            <%- task.get('name') %>
+            <%- name %>
         <% } %>
     </span>
     <% if (!_.isEmpty(version)) { %>
