--- a/Server/assets/jst/recipe-reservation-edit.html
+++ b/Server/assets/jst/recipe-reservation-edit.html
@@ -1,14 +1,14 @@
-<form class="form-horizontal">
+<form class="form">
 <div class="modal-header">
   <a href="#" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
   <h3>Edit the reservation</h3>
 </div>
 <div class="modal-body">
     <div class="control-group">
-        <label class="control-label" for="reserve" style="white-space: nowrap;">
+        <label class="control-label" style="white-space: nowrap;">
           Reserve the system?
         </label>
-        <div class="controls">
+        <div class="toggle-reservation-form">
             <div class="btn-group" data-toggle="buttons-radio">
             <button type="button" class="btn" data-reserve="true">Yes</button>
             <button type="button" class="btn" data-reserve="false">No</button>
@@ -19,12 +19,14 @@
         <label class="control-label" for="duration">
             Time to reserve
         </label>
-        <div class="controls">
-            <div class="input-append">
-                <input type="number" step="1" id="duration" name="duration"
-                    min="1" required/>
-                <span class="add-on">seconds</span>
-            </div>
+        <div class="input-append">
+          <div class="btn-group duration-unit" data-toggle="buttons-radio">
+            <input type="number" step="1" id="duration" name="duration"
+                   min="1" value="0" required/>
+            <button type="button" class="btn active" data-duration-unit="seconds">Seconds</button>
+            <button type="button" class="btn" data-duration-unit="minutes">Minutes</button>
+            <button type="button" class="btn" data-duration-unit="hours">Hours</button>
+          </div>
         </div>
     </div>
 </div>
