Reserve Workflow only accepts unit of seconds
The reserve workflow form now accepts only a unit of seconds for the
duration to reserve the system. This is part of a series of patches to
make reservation times consistent ac across the APIs in order to use a
new widget which will allow to specify different units for the
reservation time, but always converts it to seconds when communicating
with the API.

Bug: 1284368
Change-Id: I1c88455bc995c8515aef8d8e0ab6da207db35e1e

--- a/Server/assets/jst/reserve-workflow.html
+++ b/Server/assets/jst/reserve-workflow.html
@@ -53,11 +53,11 @@
       <label class="control-label" for="reserve_days">Reserve time</label>
       <div class="controls">
         <div class="input-append">
-          <input type="number" id="reserve_days" name="reserve_days" class="input-small"
-              value="<%- selection.get('reserve_days') %>"
-              min="1" max="7" step="1" pattern="[1-7]" title="Number between 1 and 7"
+          <input type="number" id="reserve_duration" name="reserve_duration" class="input-small"
+              value="<%- selection.get('reserve_duration') %>"
+              min="1" max="356400" step="1" title="Number in seconds"
               />
-          <span class="add-on">days</span>
+          <span class="add-on">seconds</span>
         </div>
       </div>
     </div>
