--- a/Server/assets/jst/recipe-edit.html
+++ b/Server/assets/jst/recipe-edit.html
@@ -1,7 +1,7 @@
 <form>
 <div class="modal-header">
   <a href="#" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
-  <h3>Edit recipe</h3>
+  <h3>Edit recipe metadata</h3>
 </div>
 <div class="modal-body">
   <label for="whiteboard">Whiteboard</label>
