--- a/Server/assets/jst/recipe-installation.html
+++ b/Server/assets/jst/recipe-installation.html
@@ -1,14 +1,13 @@
 <div class="recipe-installation-summary">
     <div>
         <% if (installation && installation.install_finished) { %>
-            <div>Installation of <%= distro_tree.toHTML() %> finished.</div>
-        <% } else if (status == 'Running') { %>
-        <% /* When https://bugzilla.redhat.com/show_bug.cgi?id=991245 is implemented we can check for 'Installing' status here instead */ %>
-            <div>Installing <%= distro_tree.toHTML() %>.</div>
+            Installation of <%= distro_tree.toHTML() %> finished.
+        <% } else if (status == 'Installing') { %>
+            Installing <%= distro_tree.toHTML() %>.
         <% } else if (installation && installation.rebooted && status == 'Aborted') { %>
-            <div>Installation of <%= distro_tree.toHTML() %> aborted.</div>
+            Installation of <%= distro_tree.toHTML() %> aborted.
         <% } else { %>
-            <div>Installation of <%= distro_tree.toHTML() %> not started.</div>
+            Installation of <%= distro_tree.toHTML() %> not started.
         <% } %>
     </div>
     <div class="recipe-installation-logs">
@@ -17,8 +16,7 @@
     <div class="recipe-installation-status">
         <% if (installation && installation.install_finished) { %>
             <span class="label label-success">Completed</span>
-        <% } else if (status == 'Running') { %>
-        <% /* When https://bugzilla.redhat.com/show_bug.cgi?id=991245 is implemented we can check for 'Installing' status here instead */ %>
+        <% } else if (status == 'Installing') { %>
             Installing
         <% } else if (status == 'Aborted' || status == 'Cancelled') { %>
             <span class="label label-warning"><%- status %></span>
