make the server figure out if other recipes are keeping this one reserved
If we make the server tell us, rather than figuring it out on the
client, then we can get away from nesting all other recipes in the job
inside the recipe JSON.

Also added a test case for this feature, and fixed it up so that the
wording also appears if <reservesys/> was not used but the recipe is
still being held.

Change-Id: Ibdaf92cb29632ec00c119208815081663b766a3a

--- a/Server/assets/jst/recipe-completed-reservation.html
+++ b/Server/assets/jst/recipe-completed-reservation.html
@@ -1,16 +1,14 @@
 <% if (reservation_request.get('reserve')) { %>
-    <p>
-    The reservation has been expired.
-    <% if (!_.isEmpty(running_recipes)) { %>
-       However, the system has not been released yet because the following
-       recipes are still running:
-       <ul class="running-recipes-list">
-        <% _.each(running_recipes, function (recipe) { %>
-            <li><%= recipe.toHTML() %></li>
-        <% }) %>
-      </ul>
-    </p>
-    <% } %>
+  <p>The reservation has expired.</p>
 <% } else { %>
-    <p>The system was not reserved at the end of the recipe.<p>
+  <p>The system was not reserved at the end of the recipe.</p>
+<% } %>
+<% if (!_.isEmpty(reservation_held_by_recipes)) { %>
+   <p>However, the system has not been released yet because the following
+   recipes are still running:</p>
+   <ul class="running-recipes-list">
+    <% _.each(reservation_held_by_recipes, function (recipe) { %>
+        <li><%= recipe.toHTML() %></li>
+    <% }) %>
+  </ul>
 <% } %>
