remove duplicate recipe objects from recipe JSON
Right now the recipe JSON includes its containing recipe set, which
includes another copy of each recipe in the set, and also its containing
job, which includes *another* copy of each recipe set in the job and all
their recipes.

We can get rid of all that and save some wasted bandwidth.

Change-Id: I4775d37ed6dcedff1301cd1e162c19b3959c3763

--- a/Server/assets/jst/recipe-header.html
+++ b/Server/assets/jst/recipe-header.html
@@ -8,7 +8,7 @@
             <abbr title="Recipe">R</abbr>:<%- id %>
         </span>
         <small>
-          1 of <%- all_recipes %> recipes in <%= recipeset.get('job').toHTML()%>
+          1 of <%- recipeset.get('job').get('recipe_count') %> recipes in <%= recipeset.get('job').toHTML()%>
         </small>
         <div class="btn-group recipe-btn-group">
         <% if (can_edit) { %>
