only enable local-datetime.js on TurboGears pages
Newer Backbone pages, where the HTML is rendered client-side, will
explicitly format timestamps into the local timezone rather than letting
local-datetime.js come along and fix them up.

This saves some wasted CPU time on the newer pages (in particular
the recipe page) where local-datetime.js was doing a lot of work in the
decorated jQuery methods.

The local-datetime.js script will still have effect on older TurboGears
pages, signalled by the presence of class="with-localised-datetimes" on
the body.

Bug: 1326162
Change-Id: I4bf58e39078b2476f6a8a835e360291b66558366

--- a/Server/assets/jst/default-root-password.html
+++ b/Server/assets/jst/default-root-password.html
@@ -10,7 +10,7 @@ table.</p>
     <% _.each(default_root_passwords, function (item) { %>
       <tr>
         <td><code><%- item.value %></code></td>
-        <td class="datetime"><%- item.valid_from %></td>
+        <td class="datetime"><%- moment.utc(item.valid_from).local().format('YYYY-MM-DD HH:mm:ss Z') %></td>
       </tr>
     <% }) %>
   </tbody>
