recipe page: indicate position within the job in the page header
Change-Id: I394100a7c138658a81507e8a2b03499e3ddbc6b8

--- a/Server/assets/jst/recipe-header.html
+++ b/Server/assets/jst/recipe-header.html
@@ -6,7 +6,7 @@
     <h1>
         <span class="recipe-id<% if (is_deleted) { %> deleted-recipe-id<% } %>"><abbr title="Recipe">R</abbr>:<%- id %></span>
         <small>
-          1 of <%- recipeset.get('job').get('recipe_count') %> recipes in <%= recipeset.get('job').toHTML()%>
+          <%- position_in_job %> of <%- recipeset.get('job').get('recipe_count') %> recipes in <%= recipeset.get('job').toHTML()%>
         </small>
         <div class="btn-group recipe-btn-group">
         <% if (can_edit) { %>
