recipe page: show guest-related info for guest recipes
Bug: 626529
Change-Id: I5aa5feb6a3f273d122d69dfe2b31ae5965a4d6dd

--- a/Server/assets/jst/recipe-installation-settings.html
+++ b/Server/assets/jst/recipe-installation-settings.html
@@ -1,3 +1,21 @@
+<% if (typeof hostrecipe != 'undefined' && hostrecipe) { %>
+  <h4>Guest Name</h4>
+  <div>
+  <% if (!_.isEmpty(guestname)) { %>
+      <code><%- guestname %></code>
+  <% } else { %>
+      <em class="muted">(none)</em>
+  <% } %>
+  </div>
+  <h4>Guest Arguments for virt-install</h4>
+  <div>
+  <% if (!_.isEmpty(guestargs)) { %>
+      <code><%- guestargs %></code>
+  <% } else { %>
+      <em class="muted">(none)</em>
+  <% } %>
+  </div>
+<% } %>
 <h4>Kernel Options</h4>
 <div>
 <% if (!_.isEmpty(kernel_options)) { %>
