--- a/Server/assets/jst/recipe-summary.html
+++ b/Server/assets/jst/recipe-summary.html
@@ -28,6 +28,10 @@
   <% } %>
 </p>
 <p>
+  <% if (typeof hostrecipe != 'undefined' && hostrecipe) { %>
+    Guest recipe hosted by <%= hostrecipe.toHTML() %>.
+    <br/>
+  <% } %>
   Using <%= distro_tree.toHTML() %><%
   if (!_.isEmpty(resource)) { %>
       <br/>on <%
