fix extraneous whitespace around deleted job/recipe ids
For deleted jobs, the job ID on the job page and recipe ID on the recipe
page are shown struck-out. But if there is whitespace after the id
inside the <span/> element, the strike-out extends into the space after
the id and looks a bit weird.

Change-Id: I16350e7d50626c10b551606bfff9f219ee03f108

--- a/Server/assets/jst/job-header.html
+++ b/Server/assets/jst/job-header.html
@@ -4,9 +4,7 @@
 </div>
 <div class="page-header">
   <h1>
-    <span class="job-id<% if (is_deleted) { %> deleted-job-id<% } %>">
-        <abbr title="Job">J</abbr>:<%- id %>
-    </span>
+    <span class="job-id<% if (is_deleted) { %> deleted-job-id<% } %>"><abbr title="Job">J</abbr>:<%- id %></span>
     <small>
       owned by <%= owner.toHTML() %>
       <% if (!_.isEmpty(group)) { %> for <%= group.toHTML() %><% } %>
