--- a/Server/assets/jst/recipe-header.html
+++ b/Server/assets/jst/recipe-header.html
@@ -4,9 +4,7 @@
 </div>
 <div class="page-header">
     <h1>
-        <span class="recipe-id<% if (is_deleted) { %> deleted-recipe-id<% } %>">
-            <abbr title="Recipe">R</abbr>:<%- id %>
-        </span>
+        <span class="recipe-id<% if (is_deleted) { %> deleted-recipe-id<% } %>"><abbr title="Recipe">R</abbr>:<%- id %></span>
         <small>
           1 of <%- recipeset.get('job').get('recipe_count') %> recipes in <%= recipeset.get('job').toHTML()%>
         </small>
