recipe page: update the icons when the tasks are expanded based on the URL anchor
Bug: 1358557
Change-Id: I81c4e02d7258e0fb90d8f3bd692ae0ed8fdbe5bd

--- a/Server/assets/jst/recipe-task-summary.html
+++ b/Server/assets/jst/recipe-task-summary.html
@@ -1,5 +1,5 @@
-<div class="task-icon" id="recipe-task-icon-<%- id %>" data-toggle="collapse" data-target="#recipe-task-details-<%- id %>">
-    <i class="fa fa-caret-right fa-lg"></i>
+<div class="task-icon">
+    <a class="fa fa-lg icon collapsed" data-toggle="collapse" data-target="#recipe-task-details-<%- id %>" />
 </div>
 <div class="task-id">
     <abbr title="Recipe Task">T</abbr>:<%- id %>
