--- a/Server/assets/jst/job-recipe.html
+++ b/Server/assets/jst/job-recipe.html
@@ -5,7 +5,7 @@
   <a class="recipe-id" href="<%- beaker_url_prefix %>recipes/<%- id %>"><abbr title="<% if (guest) { %>Guest <% } %>Recipe">R</abbr>:<%- id %></a>
 </td>
 <td class="recipe-metadata">
-  <span class="recipe-whiteboard"><%- whiteboard %></span>
+  <span class="recipe-whiteboard"><%= whiteboard_html %></span>
   <% if (!_.isEmpty(role) && role != "None" && role != "RECIPE_MEMBERS" && role != "STANDALONE") { %>
     <span class="recipe-role">
       Role: <%- role %>
