--- a/Server/assets/jst/group-edit.html
+++ b/Server/assets/jst/group-edit.html
@@ -4,9 +4,11 @@
   <h3>Edit group</h3>
 </div>
 <div class="modal-body">
-  <label for="name">Name</label>
-  <input type="text" id="group_name" name="group_name" placeholder="Name" required maxlength="255"
-        pattern="[^\s](.*[^\s])?"/>
+  <label for="group_name">Name</label>
+  <input type="text" id="group_name" name="group_name" class="input-block-level"
+         placeholder="Name" required maxlength="255"
+         pattern="[^\s/]([^/]*[^\s/])?"
+         title="Group name of up to 255 characters, excluding /"/>
   <label for="display_name">Display Name</label>
   <input type="text" id="display_name" name="display_name" placeholder="Display Name" required maxlength="255"
         pattern="[^\s](.*[^\s])?"/>
