recipe page: add OpenStack instance link
Bug: 1364288
Change-Id: I99faeb43e696abae44e138feaa94943b54b6aef8

--- a/Server/assets/jst/recipe-summary.html
+++ b/Server/assets/jst/recipe-summary.html
@@ -37,8 +37,11 @@
       <br/>on <%
       if (!_.isEmpty(resource.get('system'))) {
           %><%= resource.get('system').toHTML() %><%
-      } else {
-          %><%- resource.get('fqdn') %><%
+      } else { %>
+          <%- resource.get('fqdn') %>
+          <% if (!_.isEmpty(resource.get('instance_id'))) { %>
+              <br/>(OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a>)<%
+          } %><%
       } %><%
   } %><%
   if (status == 'Queued' && !_.isEmpty(possible_systems)) { %>
