Fix missing beaker_url_prefix prefix
Bug was reported as
 "/bkr" prefix is missing from the pool URL in system page

Fixed that instance and two others I found.

Bug: 1364311
Change-Id: I0a5797b56be0c39bba8fab70b7b4815bac02f221

--- a/Server/assets/jst/system-hardware-details.html
+++ b/Server/assets/jst/system-hardware-details.html
@@ -1,7 +1,7 @@
 <div class="alert alert-info hardware-scan-status">
   <% if (!_.isEmpty(in_progress_scan)) { %>
   Hardware scan in progress:
-  <a href="/recipes/<%- encodeURIComponent(in_progress_scan['recipe_id']) %>">R:<%- in_progress_scan['recipe_id'] %></a>
+  <a href="<%- beaker_url_prefix %>recipes/<%- encodeURIComponent(in_progress_scan['recipe_id']) %>">R:<%- in_progress_scan['recipe_id'] %></a>
   (<em><%- in_progress_scan['status'] %></em>).
 <% } else { %>
 <% if (hardware_scan_date) { %>
