job page: fix FQDN shown in recipe summary row
Commit 1a7f2c44 changed "resource" from a plain object to
a RecipeResource instance, this template should have been updated to
match.

Bug: 1362596
Change-Id: I7dbe96a401432450c863cc4662af76d0641d68ea

--- a/Server/assets/jst/job-recipe.html
+++ b/Server/assets/jst/job-recipe.html
@@ -15,7 +15,7 @@
     <%- distro_tree && distro_tree.toString() %>
   </span>
   <span class="recipe-resource">
-    <%- resource && resource.fqdn %>
+    <%- resource && resource.get('fqdn') %>
   </span>
 </td>
 <td class="recipe-comments">
