--- a/Server/assets/jst/recipe-reservation-edit.html
+++ b/Server/assets/jst/recipe-reservation-edit.html
@@ -1,7 +1,7 @@
 <form class="form">
   <div class="modal-header">
     <a href="#" class="close" data-dismiss="modal" aria-hidden="true">&times;</a>
-    <h3>Edit the reservation</h3>
+    <h3>Edit the reservation request</h3>
   </div>
   <div class="modal-body">
     <div class="control-group">
@@ -14,6 +14,26 @@
           <button type="button" class="btn" data-reserve="false">No</button>
         </div>
       </div>
+    </div>
+    <div class="control-group reservation-duration-widget"/>
+    <div class="control-group">
+      <label class="control-label">Reserve under these circumstances:</label>
+      <label class="radio">
+        <input type="radio" name="when" value="onabort"/>
+        Status is <strong>Aborted</strong>
+      </label>
+      <label class="radio">
+        <input type="radio" name="when" value="onfail"/>
+        Status is <strong>Aborted</strong> or result is <strong>Fail</strong>
+      </label>
+      <label class="radio">
+        <input type="radio" name="when" value="onwarn"/>
+        Status is <strong>Aborted</strong> or result is <strong>Fail</strong> or <strong>Warn</strong>
+      </label>
+      <label class="radio">
+        <input type="radio" name="when" value="always"/>
+        Always
+      </label>
     </div>
   </div>
   <div class="modal-footer">
