fix recipe quick info for OpenStack instances where FQDN is not known yet
Bug: 1390409
Change-Id: I6b0f102575c741a7682c97b423bf43135eca2e32

--- a/Server/assets/jst/recipe-summary.html
+++ b/Server/assets/jst/recipe-summary.html
@@ -33,15 +33,16 @@
     <br/>
   <% } %>
   Using <%= distro_tree.toHTML() %><%
-  if (!_.isEmpty(resource)) { %>
-      <br/>on <%
+  if (!_.isEmpty(resource)) { %><%
       if (!_.isEmpty(resource.get('system'))) {
-          %><%= resource.get('system').toHTML() %><%
-      } else { %>
-          <%- resource.get('fqdn') %>
-          <% if (!_.isEmpty(resource.get('instance_id'))) { %>
-              <br/>(OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a>)<%
-          } %><%
+          %><br/>on <%= resource.get('system').toHTML() %><%
+      } else if (!_.isEmpty(resource.get('instance_id')) && !_.isEmpty(resource.get('fqdn'))) {
+          %><br/>on <%- resource.get('fqdn') %>
+          <br/>(OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a>)<%
+      } else if (!_.isEmpty(resource.get('instance_id'))) {
+          %><br/>on OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a><%
+      } else if (!_.isEmpty(resource.get('fqdn'))) {
+          %><br/>on <%- resource.get('fqdn') %><%
       } %><%
   } %><%
   if (status == 'Queued' && !_.isEmpty(possible_systems)) { %>
