--- a/Server/assets/jst/recipe-running-reservation.html
+++ b/Server/assets/jst/recipe-running-reservation.html
@@ -5,7 +5,7 @@ The system is currently reserved.
         <button class="btn extend-reservation">Extend the reservation</button>
         <% if (time_remaining_seconds > 0) { %>
             <button class="btn return-reservation" data-loading-text="<i class='fa fa-spinner
-            fa-spin'></i> Returnning&hellip;">Return the reservation</button>
+            fa-spin'></i> Returning&hellip;">Return the reservation</button>
         <% } %>
     </div>
 <% } %>
