--- a/Server/assets/jst/recipe-summary.html
+++ b/Server/assets/jst/recipe-summary.html
@@ -38,9 +38,9 @@
           %><br/>on <%= resource.get('system').toHTML() %><%
       } else if (!_.isEmpty(resource.get('instance_id')) && !_.isEmpty(resource.get('fqdn'))) {
           %><br/>on <%- resource.get('fqdn') %>
-          <br/>(OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a>)<%
+          <br/>(OpenStack instance <%= render_link_by_state(resource.get('instance_id'), resource.get('href'), os_instance_gone(resource)) %>)<%
       } else if (!_.isEmpty(resource.get('instance_id'))) {
-          %><br/>on OpenStack instance <a href="<%- resource.get('href') %>"><%- resource.get('instance_id') %></a><%
+          %><br/>on OpenStack instance <%= render_link_by_state(resource.get('instance_id'), resource.get('href'), os_instance_gone(resource)) %><%
       } else if (!_.isEmpty(resource.get('fqdn'))) {
           %><br/>on <%- resource.get('fqdn') %><%
       } %><%
