Make indicator that OS is not enabled stand out
This small change makes the "OpenStack integration not enabled" stand
out.

Change-Id: I7f3c296fbd8d1fd464ddd8c1fb41b6d3fbda7a62

--- a/Server/assets/jst/user-keystone-trust.html
+++ b/Server/assets/jst/user-keystone-trust.html
@@ -1,5 +1,5 @@
 <% if (!can_edit_keystone_trust) { %>
-    <p>OpenStack Integration is not enabled.</p>
+    <div class="alert alert-info">OpenStack Integration is not enabled.</div>
 <% } else if (openstack_trust_id) { %>
 <p>
     You have created a Keystone Trust for Beaker.
