--- a/Server/assets/jst/recipe-extend-reservation.html
+++ b/Server/assets/jst/recipe-extend-reservation.html
@@ -4,11 +4,7 @@
     <h3>Extend reservation</h3>
   </div>
   <div class="modal-body">
-    <div class="input-append">
-        <input type="number" step="1" id="kill_time" name="kill_time"
-            placeholder="Time in seconds" required />
-        <span class="add-on">seconds</span>
-    </div>
+    <div class="control-group reservation-duration-widget"/>
     <span class="help-block">The watchdog time will be extended so that it 
     expires this many seconds from now.</span>
   </div>
