Add ability to report system problem to recipe page
A 'Report problem' entry has been added to the system
dropdown. Clicking it will bring up the Report Problem
form.

Bug: 1362595
Change-Id: I6402eafb7b939369da09ec0101a38c4182190579

--- a/Server/assets/jst/recipe-fqdn.html
+++ b/Server/assets/jst/recipe-fqdn.html
@@ -5,6 +5,7 @@
       <i class="fa fa-fw fa-server"></i>
       View system details
     </a></li>
+    <li><a href="#" class="report-problem"><i class="fa fa-fw fa-send-o"></i> Report problem</a></li>
   <% } %>
   <li><a href="#" class="copy-hostname"><i class="fa fa-fw fa-clipboard"></i> Copy hostname to clipboard</a></li>
   <li><a href="http://<%- fqdn %>/"><i class="fa fa-fw fa-link"></i> View http://<%- fqdn %>/</a></li>
