--- a/Server/assets/jst/system-notes.html
+++ b/Server/assets/jst/system-notes.html
@@ -3,7 +3,7 @@
 <% } %>
 <% if (can_change_notes) { %>
 <form class="add-system-note">
-  <textarea class="input-block-level" name="text" rows="6"></textarea>
+  <textarea class="input-block-level" name="text" rows="6" required></textarea>
   <span class="help-block">Notes are rendered as Markdown.</span>
   <p><button type="submit" class="btn btn-primary" data-loading-text="<i class='fa fa-spinner fa-spin'></i> Adding&hellip;"><i class="fa fa-plus"></i> Add</button></p>
 </form>
